# access-controller

./: .gitignore  agent-manifest.json
circuits/controller/: access-controller.kicad_pcb  access-controller.kicad_prl  access-controller.kicad_sch  wiegand.kicad_sch
circuits/controller/_restore_backup_2026-07-07T06-08-03-889/: access-controller.kicad_prl
code/controller/: flash_now.sh  partitions.csv  sdkconfig.defaults
code/controller/main/: CMakeLists.txt  Kconfig.projbuild  automation.c  automation.h  main.c
code/controller/main/public/: index.html  script.js  style.css
code/controller/main/services/: alert_target.c  ap.c  api.c  authorize.c  buzzer.c  enrollment.c  enrollment.h  exit.c  file_server.c  fob.c  ip_timezone.c  ip_timezone.h  keypad.c  lock.c  log_store.c  log_store.h  motion.c  rf_receiver.c  rf_registry.c  rf_registry.h  schedule.c  schedule.h  server.c  station.c  store.c  store.h  tunnel.c  wiegand.c  wiegand.h  wiegand_registry.c  wiegand_registry.h  ws_server.c
code/controller/tests/: README.md  package-lock.json  package.json  runner.mjs
docs/: CLOUD_TUNNEL.md  CONTROLLER_DEPLOY_AND_TEST.md  CONTROLLER_E2E_TEST.md  HARDWARE.md  NETWORK_PROVISIONING.md  POWER_AND_ENERGY_HARVESTING.md  PROJECT.md  README.md  REPOSITORY_MAP.md  SOFTWARE.md  WORKFLOWS.md
model/controller/: controller-cover.3mf  controller-cover.stl  controller-plate.stl  controller.blend  controller.blend1
skills/access-controller-reliability/: SKILL.md
tmp/: open-automation.org.conf
tmp/systemd/: esp32-tunnel-public.service  esp32-tunnel.service
(+64 files in other folders)
